🎨 Fixes contrast issue

--- a/main.scss
+++ b/main.scss
@@ -15,8 +15,8 @@ $spacing-unit:	 30px;
 :root {
 	--text-color:	   #111;
 	--background-color: #fdfdfd;
-	--brand-color: #2a7ae2;
-	--brand-color-dark: #1c67ca;
+	--brand-color: #1755A6;
+	--brand-color-dark: #0c2e5a;
 	--grey-color: #575757;
 	--grey-color-light: #b5b5b5;
 	--grey-color-dark: #636363;
